test_suite/alan-2022-examples/failing/005770_mutation.alan
source w begin leave 8 - rem end
